ontol/ontol-compiler/test-cases/error/repr/raw_octets_abstract.on
def foo ( // ERROR type not representable
    rel* 'bytes': octets // NOTE type of field is abstract
)
